--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "element-ui": "^2.4.5",
+    "element-plus": "^1.0.2-beta.28",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -28,7 +28,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "vue-cli-plugin-element": "~1.0.1",
+    "vue-cli-plugin-element-plus": "~0.0.13",
     "vue-cli-plugin-vite": "~1.4.11"
   }
 }
