--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
+    "eslint_d": "^11.0.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "eslint_d": "^11.0.0",
+    "vite-plugin-eslint": "^1.3.0",
     "vue-cli-plugin-element-plus": "~0.0.13",
     "vue-cli-plugin-storybook": "~2.1.0",
     "vue-cli-plugin-vite": "~1.4.11"
