--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "element-plus": "^1.0.2-beta.28",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^6.0.26",
